frontend/tests/errors/ER-003/bool_to_int/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Type mismatches are reported as compile-time errors | Type mismatch: cannot assign boolean to integer


&^main() -> #i32 {
    x:#i32 = 1
    x
}
